Basic navigable book